# woodshed-ai

./: .gitignore  CHANGELOG.md  README.md  pytest.ini  tasks.py
apps/agent-business-builder/: business_builder.py  main.py  strategy.md  test_builder.py
apps/chat-groq/: st_chat.py  st_demo.py
apps/chat-sql/: 01-explore.ipynb
apps/dalle_app/: config.py  main.py
data/: wikipedia_pages.txt
data/output/: chunked_files.json  gemma-7b-it.txt  llama3-70b-8192.txt  llama3-8b-8192.txt  mixtral-8x7b-32768.txt  wikipedia_pages.txt
docs/notes/: woodshed.md
labs/chat-with-pdf/: README.md  st_app.py
labs/fastapi/: main.py
labs/flex_chat/: main copy.py  main.py
labs/rag-with-chroma/: main.py
labs/universal_chat/: echohive.py  main.py
logs/: gemma-7b-it.txt  llama3-70b-8192.txt  llama3-8b-8192.txt  mixtral-8x7b-32768.txt
notebooks/LangChain/: LangChain_react.ipynb
providers/gemini/: gemini_cli.py
providers/openai/: test_chatbot_simple.py  test_respond_in_spanish.py  test_url_summarizer.py
teacher_kit/: main.py
tests/: test_chatbot_simple.py  test_enhanced_chunking.py  test_explore_yoga_integration.py  test_respond_in_spanish.py  test_scrape_wikipedia.py
tests/labs/: test_universal_chat.py
tmp/chroma-populate/: chroma.sqlite3
tools/crewai/beta/: README.md  pyproject.toml
tools/crewai/beta/reports/: ai-agents.md  yoga-ai.md
tools/crewai/beta/src/beta/: crew.py  main.py
tools/crewai/beta/src/beta/config/: tasks.yaml
tools/crewai/beta/src/beta/tools/: custom_tool.py
woodshed/: __init__.py  config.py  log_util.py  logging.py
(+57 files in other folders)
