[tool.poetry]
name = "beta"
version = "0.1.0"
description = "beta using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
beta = "beta.main:run"
run_crew = "beta.main:run"
train = "beta.main:train"
replay = "beta.main:replay"
test = "beta.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
